# rag_project_learn

./: pyproject.toml  rag.ipynb  requirement.txt
notebook/: document.ipynb
