[project]
name = "rag-krishnaik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "pip>=26.1.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "tqdm>=4.68.3",
]
